@@ -173,4 +173,8 @@ No match
     ab
 No match
 
+/\C[^\v]+\x80/utf
+    [AΏBŀC]
+No match
+
 # End of testinput22
